# spark_cloud1

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start.sh
backend/: requirements.txt
backend/app/: __init__.py  config.py  database.py  databricks_service.py  job_manager.py  main.py  models.py  spark_jobs.py  storage.py
docs/: performance_report.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
infrastructure/terraform/: databricks.tf  main.tf
notebooks/: spark_ml_jobs.py
scripts/: databricks_deploy.py  download_sample_data.py  run_local.sh
