[project]
name = "spark-data-processor-backend"
version = "1.0.0"
description = "FastAPI backend for Spark-based data processing and ML jobs"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.2.1",

  "sqlalchemy>=2.0.45",
  "psycopg2-binary>=2.9.11",

  "pandas>=2.3.3",
  "numpy>=2.3.5",
  "requests>=2.32.5",
  "aiofiles>=25.1.0",

  "boto3>=1.42.8",
  "httpx>=0.28.1"
]
